--- a/code/style.css
+++ b/code/style.css
@@ -1,139 +1,164 @@
 .header {
   display: flex;
-  justify-content: space-between;
-
-}
+  margin: 20px;
+  width: 100%;
+ }
 
 .logo {
   width: 100px;
 }
 
-.big-container {
+h1 {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 50px;
+  color: #B677D4;
+  margin: 15px;
+  }
+
+.navigation {
+  display: flex;
+  align-items: flex-end;
+  }
+
+a:link, a:visited {
+  background-color: black;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  }
+
+a:hover, a:active {
+  background-color: #81F0A3;
+}
+
+.main-container {
 display: flex;
 flex-direction: column;
-
 }
 
 .big-news {
-  height: 610px;
-  margin: 10px 0;
-  display: grid; 
-  grid-gap: 2px;
-  grid-template-columns: 1fr;
-  border: 5px solid black;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: auto;
+  height: auto;
 }
 
 .sushi {
   width: 100%;
   height: auto;
   margin: 0;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px;
+}
+
+.text-big-news {
+  width: auto;
+  height: auto;
+  margin: 0 5px 0 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h2 {
-  
   font-family: Arial, Helvetica, sans-serif;
   padding: 0%;
   margin: 2px;
 }
 
 h3 {
-  
   font-family: Arial, Helvetica, sans-serif;
   padding: 0%;
   margin: 2px;
 }
 
-.text {
-  background-color: white;
-  width: auto;
-  height: auto;
-  padding: 5px;
-  margin: 0;
+
+hr {
+  display: block;
 }
-
-
-
 
 .other-news {
-
-margin: 10px 2px;
-display: grid; 
-grid-gap: 2px;
-grid-template-columns: 2fr;
-border: 3px solid grey;
-color: black;
-}
-
-
-
-/* .other-news {
   display: grid;
   grid-gap: 5px;
   grid-template-columns: 1fr;
-  margin: 5px;
-} */
+  height: auto;
+  width: 100%;
+  }
 
+.small-news {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+}
 
 .image-other {
   width: auto;
-  height: 100%;
-  margin: 0;
-
-}
-
-.box {
-  margin: 0;
-  width: 100%;
   height: 200px;
+  margin: 0;
+  object-fit: contain;
+  
+
+}
+
+.text-other-news {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: auto;
   padding: 5px;
- 
-}
-
-.first {
-  background-color: aqua;
-}
-
-/* .biscuit-basket {
-  object-fit: cover;
-  height: 100%;
-  width: 50%;
-} */
-
-.second {
-  background-color: blueviolet;
-}
-
-.third {
-  background-color: cadetblue;
-}
-
-.forth {
-  background-color: chartreuse;
-}
-
-.fifth {
-  background-color: cornflowerblue;
-}
-
-.sixth {
-  background-color: crimson;
-}
-
-.seventh {
-  background-color: darkgoldenrod;
-}
-
-.eighth {
-  background-color: darkmagenta;
+  /* background-color: honeydew; */
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 
-
+@media (max-width: 767px) {
+  .navigation {
+    display:none;
+  }  
+}
 
 @media (min-width: 768px) {
+ 
+
+  .big-news {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .logo {
+    width: 150px;
+  }
+
+  h1 {
+    display:none;
+  }
+
+  .other-news {
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr;
+    height: auto;
+    width: 100%;
+    }
+  }
+
+@media (min-width: 1200px) {
   .logo {
     width: 200px;
   }
-  
-}
+
+  h1 {
+    font-size: 100px;
+  }
+
+
+  .other-news {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+   }
+  }
