added main news section

--- a/code/style.css
+++ b/code/style.css
@@ -13,6 +13,44 @@ padding-bottom: 200px;
 }
 /*** All text***/
 
+h1 {
+  font-size: 4rem;
+  font-family: 'Archivo Black', sans-serif;
+  padding: 10px 10px;
+  margin: 10px 10px;
+  text-align: center;
+  color:#A39161;
+  letter-spacing: 20px;
+}
+h2 {
+  font-family: 'Ubuntu', sans-serif;
+  color: black;
+  font-size: 2rem;
+  text-align: center;
+  line-height: 1.5;
+  padding-top: 50px;
+}
+h3 {
+  font-family: 'Ubuntu', sans-serif;
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 1.5;
+  padding-top: 20px;
+}
+p {
+  font-size: 1.3rem;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  letter-spacing: 2px;
+  padding: 15px 0;
+  line-height: 1cm;
+}
+
+span {
+  color:#A39161;
+}
+
 
 
 /*** Header ***/
