--- a/code/style.css
+++ b/code/style.css
@@ -1,11 +1,6 @@
 html {
   background: #fff;
-  color: #fff;
-}
-
-.big-news {
-font-family: 'Courier New', Courier, monospace;
-
+  color: #000;
 }
 
 .header {
@@ -14,29 +9,159 @@ font-family: 'Courier New', Courier, monospace;
   text-align: center;
   background: #000000;
   color: white;
-  font-size: 30px;
+}
+
+h1, h2, h3, p {
+  font-family: garamond;
+}
+
+h1 {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+p {
+  font-size: 16px;
+}
+
+body {
+  width: 100%; 
+}
+
+.big-news {
+  font-family: Garamond;
+  font-weight: bold;
+  }
+
+.big-image img {
+  width: 60%;
+  float: left;
+  margin-right: 20px;
+  filter: grayscale(100%)
+}
+
+.big-image img:hover {
+  filter:grayscale(0%)
+}
+
+.big-news-container {
+  float: left;
+  overflow: hidden;
+  margin: 0;
 }
 
 .menu {
-  float: right;
+  height: 25px;
+  width: 100%;
+  background: #000;
+  margin-bottom: 10px;
 }
+
 .menu ul {
   list-style: none;
-  margin: 8px;
+  margin: 0;
   padding: 0
 }
 .menu li {
-  display: inline-block;
   padding: 0 20px;
+  float: right;
 }
 .menu a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
   text-transform: uppercase;
   font-size: 16px;
   font-weight: bold;
   font-family: Garamond;
+  background-color: #000;
 }
 .menu a:hover {
   text-decoration: underline;
+}
+
+.Small-news {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  width: 100%; 
+}
+
+.Small-news img {
+  object-fit: cover;
+  width: 80%;
+  height: 200px;
+}
+
+.news1, .news2, .news3, .news4 {
+  grid-column: span 1;
+  display: grid; 
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer {
+  font-family: garamond;
+  font-weight: bold;
+  text-align: center;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+/* Tablets */
+@media (min-width: 668px) and (max-width: 1024px){
+  .Small-news {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    width: 100%;
+    padding: 20px; 
+  }
+  
+  .Small-news img {
+    object-fit: cover;
+    width: 80%;
+    height: 200px;
+  }
+  
+  .news1, .news2, .news3, .news4 {
+    grid-column: span 2;
+    display: grid; 
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+/* Mobiles */
+@media (max-width: 667px) {
+  .Small-news {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    width: 100%;
+    padding: 20px; 
+  }
+  
+  .Small-news img {
+    object-fit: cover;
+    width: 80%;
+    height: 200px;
+  }
+  
+  .news1, .news2, .news3, .news4 {
+    grid-column: span 4;
+    display: grid; 
+    flex-direction: column;
+    justify-content: center;
+  }
 }
