--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,8 @@
 }
 
 html {
-  background-color: rgb(14, 13, 13);
+  /*background-color: orange;
+  background-color: blue;*/
 }
 
 body {
@@ -53,8 +54,16 @@ h1 {
 /* Big news section */
 
 section.big-news {
-  margin: 11rem auto;
-  border: 3px solid red;
+  margin: 0 auto;
+  margin-top:11rem;
+  /*width: 90%;*/
+  border:3px solid;
+  background-color:lightcyan; 
+}
+
+.cat-foto-wrapper {
+  margin: 20px;
+
 }
 
 .cat-foto-wrapper img {
@@ -63,12 +72,11 @@ section.big-news {
 }
 
 .big-news-text {
-  border: 2px solid;
 }
 
 section.big-news h2 {
   text-align: center;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   padding: 1rem;
 }
 
@@ -76,12 +84,66 @@ section.big-news p {
   font-size: 1.5rem;
   padding: 1rem;
 }
-/* Small section*/
+
+/* SMALL SECTION*/
+section.small-news {
+ margin-top: 2rem;
+ border:4px dashed;
+  
+}
+article {
+  margin-top: 30px;
+  border:4px solid red;
+  width: 70%;
+  margin: 0 auto;
+}
+article.breakfast-club-wrapper {
+ background-color: cornsilk;
+}
+
+h3 {
+  text-align: center;
+  font-size: 1.5rem;
+}
+div.breakfast-club {
+  display: flex;
+
+}
+section.small-news img {
+  width: 50%;
+  /*height: 20vh;
+  float:right;*/
+}
+section.small-news p {
+  font-size: 1.2rem;
+  border:2px solid purple;
+  /*width: 50%;
+  height: 20vh;
+  float:left;*/
+  
+}
+
+
+
+
 
 /*Media queries*/
 @media (min-width: 800px) {
   section.big-news {
     display: flex;
     align-items: center;
+    width: 90%;
+  }
+
+  .cat-foto-wrapper img {
+    border-radius: 20%;
+    width:360px;
+    
+  }
+}
+@media (min-width:1212px) {
+  .cat-foto-wrapper img {
+    margin-top: 10px;
+    width: 500px;
   }
 }
