--- a/code/style.css
+++ b/code/style.css
@@ -51,7 +51,7 @@ a:active {
 .big-news {
   display: grid;
   grid-template-columns: repeat(2, 50%);
-  margin: 10px 5px;
+  margin: 30px 5px;
   animation: start 2s ease-in-out;
 }
 
@@ -59,6 +59,10 @@ a:active {
   max-width: 90%;
   box-shadow: 4px 6px 6px rgba(0, 0, 0, 0.8);
   margin: 5px 0 10px 5px;
+}
+
+.big-news-img:hover {
+  opacity: 0.7;
 }
 
 .intro {
@@ -79,21 +83,20 @@ a:active {
   justify-items: center;
   border: 2px solid black;
   margin: 10px;
-  padding: 20px 20px 0 20px;
 }
 
 .small-news {
   background-color: #fff;
-  max-width: 80%;
+  max-width: 90%;
   box-shadow: 2px 6px 4px rgba(0,0,0,0.8);
-  padding-bottom: 10px;
+  padding: 10px 5px 10px 0;
   margin: 30px 0;
   text-align: center;
   line-height: 1.6;
 }
 
 .small-news > .small-image  {
-  width: 240px;
+  width: 100%;
   padding: 10px 20px 30px 20px;
 }
 
@@ -141,7 +144,7 @@ footer {
 
  /* tablet */
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .header {
     display: flex;
     flex-direction: column;
@@ -171,7 +174,7 @@ footer {
 
 /* mobile */
 
-@media (min-width: 0) and (max-width: 767px) {
+@media (max-width: 767px) {
   .header {
     display: flex;
     flex-direction: column;
