--- a/code/style.css
+++ b/code/style.css
@@ -26,11 +26,12 @@ header {
   margin: 0;
   padding: 0;
   display: flex;
-  /* justify-content: flex-end; */
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 .flex-child {
-  margin-left: 25px;
+  margin-left: 35%;
 }
 
 a {
@@ -134,6 +135,10 @@ img {
   .grid-news article {
     grid-column: span 1;
   }
+
+  .flex-child {
+    margin-left: 25px;
+  }
 }
 
 /* Specification for bigger desktop */
@@ -148,5 +153,9 @@ img {
 
   .grid-news article {
     grid-column: span 1;
+  }
+
+  .flex-child {
+    margin-left: 25px;
   }
 }
