--- a/code/style.css
+++ b/code/style.css
@@ -14,7 +14,7 @@ body {
   /*background-color:rgb(228, 168, 56);*/
   background-color: orange;
   min-height: 100vh;
-  margin-top: 10em;
+  margin-top: 12rem;
   min-width: 444px;
 }
 /*Header styling*/
@@ -88,22 +88,24 @@ section.big-news p {
 /* SMALL SECTION*/
 section.small-news {
  margin-top: 2rem;
- border:4px dashed;
-  
 }
+
 article {
-  margin-top: 30px;
-  border:4px solid red;
   width: 70%;
   margin: 0 auto;
+  margin-top:20px;
 }
+
 article.breakfast-club-wrapper {
  background-color: cornsilk;
+ height: 300px;
 }
 
 h3 {
-  text-align: center;
   font-size: 1.5rem;
+  padding:10px;
+  text-align: center;
+  
 }
 div.breakfast-club {
   display: flex;
@@ -111,12 +113,13 @@ div.breakfast-club {
 }
 section.small-news img {
   width: 50%;
-  /*height: 20vh;
-  float:right;*/
+  height: 200px;
+  margin: 10px;
+
 }
 section.small-news p {
   font-size: 1.2rem;
-  border:2px solid purple;
+  margin:10px;
   /*width: 50%;
   height: 20vh;
   float:left;*/
