--- a/code/styles.css
+++ b/code/styles.css
@@ -25,7 +25,7 @@ main {
 a {
   text-decoration: none;
   color: var(--nav);
-  font-weight: 700;
+  font-weight: 500;
   cursor: url('logo-pics/cursor.png'),pointer;
 }
 
@@ -119,7 +119,7 @@ hr {
   align-items: center;
   justify-content: space-around;
   margin-bottom: 10px;
-  width: 100%;
+  flex-basis: 20%;
 }
 
 .news-box-styles {
@@ -168,12 +168,7 @@ hr {
 }
 
 .signature-container {
-margin: 10px 50px 10px 10px;
-}
-
-.signature {
-  font-size: 10px;
-  color: var(--background-color);
+  display: none;
 }
 
 /* Styles for Tablet version */
@@ -198,11 +193,16 @@ margin: 10px 50px 10px 10px;
     font-size: 14px;
     letter-spacing: 1px; 
   }
+
+  .nav-links:hover {
+    color: var(--pink);
+
+  }
   
   .logo-tablets-and-mobiles { 
     width: 160px;
     height: 70px;
-    margin-left: -18px;
+    margin-left: -22px;
   }
     
   .top-navicons {
@@ -221,16 +221,11 @@ margin: 10px 50px 10px 10px;
   }
 
   .banner-container {
-    display: flex;
     flex-direction: row;
-    align-items: center;
     margin-top: 18px;
   }
   
   .list-container {
-    display: flex;
-    align-self: flex-start;
-    flex-direction: row;
     margin-bottom: 10px;
   }
 
@@ -251,10 +246,7 @@ margin: 10px 50px 10px 10px;
 
   .news-parent-container {
     display: flex;
-    flex-direction: row;
     flex-flow: wrap;
-    display: inline-flex;
-    flex-wrap: wrap;
     margin: -10px -10px -10px -10px;
     width: calc(100% + 20px);
   }
@@ -262,22 +254,53 @@ margin: 10px 50px 10px 10px;
   .news-container {
     flex: 1;
     min-width: 350px;
+    max-width: 400px;
   }
 
-  .news-box-styles {
-    box-sizing: border-box;
-   
-  }
-  
   .news-pics {
     width: 100%;
     aspect-ratio: 14 / 9;
   }
 
+  .button-container {
+    margin: 20px auto;
+  }
 
+  .footer-aligning {
+    display: flex;
+    margin-right: 20px;
+    margin-bottom: -10px;
+  }
 
+  .footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 
+  .tablet-styles {
+    flex: 1 50%;
+    justify-content: center;
+    margin: 0 auto 20px;
+    }
+  
+  .subscribe {
+    font-size: 16px;
+    padding: 15px 48px;
+    margin: 15px 10px 15px 10px;
+    border-radius: 25px;
+    }
+    
+  .signature-container {
+    display: inline-flex;
+    }
 
+  .signature {
+    font-size: 10px;
+    color: var(--background-color);
+    }
 }
 
 /* Styles for Desktop version */
@@ -314,6 +337,7 @@ margin: 10px 50px 10px 10px;
 }
 
 .nav-links {
+  /* flex-direction: column; */
   margin-right: 50px;
 }
 }
