--- a/code/style.css
+++ b/code/style.css
@@ -18,17 +18,10 @@ align-items: center;
 flex-direction: row;
 }
 
-.a-nav{
-  color: #383C4B;
-  text-decoration: none;
 
-}
 
 .meny{
-  /* display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  align-self: flex-end; */
+  display: inline;
 }
 .menu-line{
   width: 35px;
@@ -40,6 +33,14 @@ flex-direction: row;
 }
 
 .logo{
+  width: 50px;
+  height: 50px;
+  border: 3px solid #25838A;
+  border-radius: 50%;
+  padding: 5px;
+  
+}
+.logo-big{
   width: 50px;
   height: 50px;
   border: 3px solid #25838A;
@@ -153,35 +154,60 @@ hr{
 .more-text{
   display: none;
 }
+.logo-big{
+  display: none;
+}
 }
 
 /*tablet*/
  @media (min-width: 768px) and (max-width: 991px) {
+
+  .logo{
+    display: none;
+  }
   header{
     /* display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: auto;
-    grid-gap: 1em;
-    align-items: center;
-    text-align: center;
-    border-bottom: 4px solid black;
-    grid-template-rows: auto; */
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
+    grid-template-areas: "head1 head2 head3 head4 head5";
+    grid-template-rows: auto;
+    grid-gap: 1em;  */
+    
+   
   }
+nav{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-areas: "head1 head2 head3 head4 head5";
+  grid-template-rows: auto;
+  grid-gap: 1em;
+  align-items: center; 
+  justify-items: center;
 
+}
   .logo{
-    grid-column: 3;
-    align-self: center;
-  }
-  .head1{
-    order:1;
-    align-self: flex-start;
+  grid-area: head3;
   }
 
+.nav1{
+  grid-area: head1;
+  color: #383C4B;
+  text-decoration: none;
+}
+.nav2{
+  grid-area: head2;
+  color: #383C4B;
+  text-decoration: none;
+}
+.nav3{
+  grid-area: head4;
+  color: #383C4B;
+  text-decoration: none;
+}
+.nav4{
+  grid-area: head5;
+  color: #383C4B;
+  text-decoration: none;
+}
   .meny{
     display: none;
   }
@@ -222,6 +248,7 @@ hr{
     max-width: 400px;
     margin: 40px 40px 40px 0px;
     text-align: left;
+    font-size: 2em;
   }
   h3{
     font-size: 1.2em;
@@ -250,6 +277,10 @@ hr{
   .meny{
     display: none;
   }
+  .logo-big{
+    display: none;
+  }
+
   .small-text{
     display: none;
   }
@@ -259,6 +290,9 @@ hr{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap:30px;
     margin: 0 30px;
+  }
+  h2{
+    font-size: 3em;
   }
 
   h3{
@@ -288,5 +322,30 @@ hr{
   }
   .news-card:hover{
     opacity: 0.5;
+  }
+  .nav1{
+    grid-area: head1;
+    color: #383C4B;
+    text-decoration: none;
+    padding-left: 30px;
+  }
+  .nav2{
+    grid-area: head2;
+    color: #383C4B;
+    text-decoration: none;
+    padding-left: 30px;
+  }
+  .nav3{
+    grid-area: head4;
+    color: #383C4B;
+    text-decoration: none;
+    padding-left: 30px;
+  }
+  .nav4{
+    grid-area: head5;
+    color: #383C4B;
+    text-decoration: none;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
