--- a/code/style.css
+++ b/code/style.css
@@ -1,25 +1,25 @@
 html {
   color: #272343;
-  background-color: #F0F5F9;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-header {
+/* header {
   display: flex;
 }
 
 
 /* ------HEADER SECTION STYLING ----- */
 
-nav {
+/* nav {
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: start;
-  /* justify-content makes it align */
+  justify-items: start;  justify-content makes it align 
   padding: 10px;
   background-color: #fff;
-}
+} */
 
-h1 {
+
+/* h1 {
   font-size: 36px;
 }
 
@@ -38,7 +38,59 @@ h1 {
   display: none;
   padding: 10px;
   margin: 5px;
+} */
+
+header {
+  background: #F0F5F9;
+  overflow: hidden;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.5rem;
+  border-bottom: 5px solid rgb(161, 160, 160);
 }
+
+h1{
+  font-weight: 600;
+  font-size: 48px;
+  margin: 20px;
+}
+.logo {
+  width: 80px;
+  height: auto;
+  padding: 10px;
+}
+
+.navigation li a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+  padding: 1.5rem;
+}
+
+.navigation li a:hover {
+opacity: 0.6;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px;
+}
+
+.arch-mag {
+  display: flex;
+  justify-content: flex-start;
+}
+.nav-links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+li {
+  display: inline-block;
+}
+
+
 
 
 /* ------BIG NEWS SECTION STYLING ----- */
@@ -50,9 +102,20 @@ h1 {
   margin: 30px;
   padding: 20px;
   border: solid #F0F5F9;
-  border-bottom: 5px solid #000;
+  /* border-bottom: 5px solid #000;  used hr instead */
 }
 
+hr {
+  width: 90%;
+  height: 5px;
+  border: none;
+  background-color: rgb(59, 55, 55);
+  margin: 30px;
+}
+.big-news a{
+  text-decoration: none;
+  color: grey;
+}
 .big-news-image {
   width: 100%;
 }
@@ -66,16 +129,36 @@ h1 {
   box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
 }
 
-.top-projects {
-  padding-left: 40px;
+.top-news-text {
   color: grey;
+  font-size: 2rem;
   box-sizing: border-box;
-  margin: 0;
-  /* font-family: "Open Sans";  or itatik */
+  text-decoration: none;
+  margin: 40px;
+
+ 
 }
+ .top-projects:hover {
+    color:black;    
+  }
+  /* font-family: "Open Sans";  or itatik */
+
 
 
 /* ------OTHER NEWS SECTION STYLING ----- */
+
+h4 {
+  position: absolute;
+  font-style: italic;
+  text-align: center;
+  background-color: #C9D6DF90;
+  color: black;
+  padding: 10px;
+  box-shadow: 8px 8px yellow;
+  width: 100px;
+  font-size: 18px;
+  margin: 0;
+}
 
 .news-cards {
   /* width: 100%;  If I put a margin to news-card the page does not fit in the browser*/
@@ -93,7 +176,10 @@ h1 {
   margin: 20px;
   padding: 15px;
 }
-
+.card a {
+  text-decoration: none;
+  color: grey;
+}
 .news-image {
   width: 100%;
   display: flex;
@@ -110,13 +196,112 @@ h1 {
 }
 
 
+/* ------CTA SECTION STYLING ----- */
+
+.cta {
+  background-color: #ffe600;
+  padding: 3% 5%;
+  text-align: center;
+}
+.cta-text {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+button, button::after {
+  width: 200px;
+  height: 66px;
+  font-size: 24px;
+  font-family: 'Bebas Neue', cursive;
+  background: linear-gradient(45deg, transparent 5%, black 5%);
+  border: 0;
+  color: #fff;
+  letter-spacing: 3px;
+  line-height: 66px;
+  box-shadow: 6px 0px 0px #00E6F6;
+  outline: transparent;
+  position: relative;
+}
+
+button::after {
+  --slice-0: inset(50% 50% 50% 50%);
+  --slice-1: inset(80% -6px 0 0);
+  --slice-2: inset(50% -6px 30% 0);
+  --slice-3: inset(10% -6px 85% 0);
+  --slice-4: inset(40% -6px 43% 0);
+  --slice-5: inset(80% -6px 5% 0);
+  
+  content: 'SUBSCRIBE';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, #F8F005 5%);
+  text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6;
+  clip-path: var(--slice-0);
+}
+
+button:hover::after {
+  animation: 1s glitch;
+  animation-timing-function: steps(2, end);
+}
+
+@keyframes glitch {
+  0% {
+    clip-path: var(--slice-1);
+    transform: translate(-20px, -10px);
+  }
+  10% {
+    clip-path: var(--slice-3);
+    transform: translate(10px, 10px);
+  }
+  20% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 10px);
+  }
+  30% {
+    clip-path: var(--slice-3);
+    transform: translate(0px, 5px);
+  }
+  40% {
+    clip-path: var(--slice-2);
+    transform: translate(-5px, 0px);
+  }
+  50% {
+    clip-path: var(--slice-3);
+    transform: translate(5px, 0px);
+  }
+  60% {
+    clip-path: var(--slice-4);
+    transform: translate(5px, 10px);
+  }
+  70% {
+    clip-path: var(--slice-2);
+    transform: translate(-10px, 10px);
+  }
+  80% {
+    clip-path: var(--slice-5);
+    transform: translate(20px, -10px);
+  }
+  90% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 0px);
+  }
+  100% {
+    clip-path: var(--slice-1);
+    transform: translate(0);
+  }
+}
+
 
 /* ------FOOTER SECTION STYLING ----- */
 footer {
   text-align: center;
   padding: 3px;
-  background-color: #272343;
-  color: #C9D6DF;
+  background-color: #F0F5F9;
 }
 
 .footer-info {
@@ -157,7 +342,7 @@ footer {
 
 @media (min-width: 768px) {
 
-  nav {
+  /* nav {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: start;
@@ -170,7 +355,7 @@ footer {
 
   .first, .second {
     display: flex;
-  }
+  } */
 
   .big-news {
     display: grid;
@@ -191,6 +376,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: start;
+    grid-gap: 20px;
   }
 
   .card {
@@ -200,6 +386,7 @@ footer {
     border: 1px solid grey;
     /* grid-gap: 30px;  puts a space between text and image*/
   }
+  
 }
 
 @media (min-width: 1200px) {
@@ -212,15 +399,15 @@ footer {
 
   .card {
     display: grid;
-
+  }
 
     /* Things needed to be done;
 
     - text properties
     - header / nav bar
     - footer
-    - text on images (AVARD WINNING, EDITORS` PICK etc.. show on when hover ?
     - fine tuning
     - disable hover effect on mobile size
     
-    */
+    */ }
+
