--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,4 @@
+/* Variables for easy access color scheme */
 :root{
   --bg-color: #899878;
   --txt-color: #121113;
@@ -22,9 +23,10 @@ header, .big-news, .small-news-card{
   background-color: var(--box-bg-color);
   border-radius: 10px;
   padding: 20px;
-  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
-  -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
-  box-shadow: 0 4px 6px rgba(0,0,0,.3);
+/* Polaroid(?) boxshadow */
+  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .5);
+  -moz-box-shadow: 0 4px 6px rgba(0,0,0,.5);
+  box-shadow: 0 4px 6px rgba(0,0,0,.5);
 }
 
 header{
@@ -35,11 +37,10 @@ header{
   max-block-size: 10vw;
   margin: 0 0 0 10px;
   object-fit: cover; 
-  border-radius: 10px;
 }
 
 .site-name{
-  font-size: 4vw;
+  font-size: 3vw;
   margin: 0 0 0 10vw; 
 }
 
@@ -47,6 +48,8 @@ nav{
   display:flex;
   justify-content: space-between;
   align-items: center;
+  text-transform: uppercase;
+  font-size: 1.2vw;
 }
 
 .navigation ul li{
@@ -75,6 +78,14 @@ nav{
   display:flex;
   flex-direction: column;
   margin: 10px 20px;
+}
+
+.big-news-picture{
+  display: block;
+  margin: 0 auto;
+  object-fit: contain;
+  width: 100%;
+  height: 400px;
 }
 
 .big-news-text-block{
