--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,120 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  margin: 0;
+  background-color: rgb(255, 238, 224);
+  font-family: "Karla", sans-serif;
+}
+
+.header-wrapper {
+  background-color: rgb(255, 238, 224);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 40px 0px 40px;
+  /* margin: 20px 40px 25px 40px; */
+}
+
+.logo {
+  width: 150px;
+  justify-content: flex-start;
+}
+
+a:link {
+  color: black;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-decoration: none;
+  padding: 15px;
+}
+
+a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: rgb(212, 99, 212);
+  text-decoration: underline;
+}
+
+.search-link {
+  background-color: orange;
+}
+
+.navigation {
+  display: inline;
+  justify-content: flex-end;
+}
+.big-news-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 1rem;
+  padding: 0px 40px 0px 40px;
+  /* margin: 20px 40px 25px 40px; */
+  background-color: rgb(255, 238, 224);
+}
+
+.big-news-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.big-news {
+  display: flex;
+  justify-content: space-evenly;
+
+  padding-top: 60px;
+}
+
+.big-news-text {
+  padding: 0px 80px 80px 80px;
+}
+
+.big-news-img {
+  display: flex;
+  flex-flow: column;
+  width: 700px;
+}
+
+.big-news-small-img {
+  width: 200px;
+  height: 180px;
+}
+
+.preamble {
+  font-size: 40px;
+}
+
+/* .big-text {
+  padding: 20px;
+} */
+
+.small-news-wrapper {
+  /* display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 1rem;
+  padding: 100px 40px 0px 40px;
+  margin: 20px 40px 25px 40px;
+  background-color: rgb(255, 238, 224); */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  background-color: rgb(255, 238, 224);
+  margin: 20px 40px 25px 40px;
+  padding: 50px;
+  justify-items: center;
+  justify-content: space-evenly;
+  gap: 45px;
+}
+
+.small-news-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 70px;
+  justify-content: space-evenly;
+  flex-direction: row;
+  align-items: center;
+}
+
+.small-news-img {
+  width: 300px;
 }
