--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,130 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  color: black;
+  background: #fff;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0; 
+  width: 100%;
+  background-color: #fff;
+}
+
+.logo {
+  width: 300px;
+  height: auto;
+  margin-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navigation {
+  font-family: 'Urbanist', sans-serif;
+  padding: 20px;
+  padding-top:40px;
+  margin-right: 30px;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: black;
+  letter-spacing: 2px;
+  padding: 12px;
+  align-items: center;
+}
+
+.navigation a:hover {
+  background-color: #99a3a7;
+}
+
+.line {
+  display: block;
+  width:27px;
+  height: 3px;
+  margin: 5px;
+  background-color: black;
+}
+
+.burger {
+  position: absolute;
+  top: 50px;
+  right: 40px;
+}
+
+.tortoise {
+  width: 500px;
+  height: auto;     
+}
+
+p {
+  font-family: 'Oswald', sans-serif;
+}
+
+.big-news-section {
+  margin-left: 20px;
+  margin-top: 140px;
+}
+
+.big-news-paragraph {
+  margin-top: 2px;
+  margin-bottom: 30px;
+  font-size: 28px;
+}
+
+.small-img {
+  width: 300px;
+  height: auto;
+}
+
+.small-news {
+  margin-top: 0;
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 30px;
+}
+
+.small-news-section {
+  margin-left: 20px; 
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 5px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color:black;
+  width: 100%;
+}
+
+.logo-footer {
+  width: 200px;
+  height: auto;
+  padding: 20px;
+  display: block;
+  margin: auto;
+}
+
+
+
+<!-- Mobile -->
+@media only screen and (min-width: 600px) {
+  .navigation a {
+    display: none;
+  }
+}
+
+<!-- Tablet and desktop -->
+@media only screen and (min-width: 768px) {
+  .burger {
+    display: none;
+  }
 }
