--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,13 @@
 html {
   color: #272343;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Cutive Mono', monospace;
 }
+
+/* 
+font-family: 'Cutive Mono', monospace;
+font-size: 1.8em;
+line-height: 45px;
+
 
 /* header {
   display: flex;
@@ -10,46 +16,15 @@ html {
 
 /* ------HEADER SECTION STYLING ----- */
 
-/* nav {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-items: start;  justify-content makes it align 
-  padding: 10px;
-  background-color: #fff;
-} */
-
-
-/* h1 {
-  font-size: 36px;
-}
-
-.logo-name {
-  display: flex;
-  justify-content: space-between;
-}
-
-.logo {
-  width: 50px;
-  padding-left: 10px;
-}
-
-.first,
-.second {
-  display: none;
-  padding: 10px;
-  margin: 5px;
-} */
-
 header {
   background: #F0F5F9;
   overflow: hidden;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Bebas Neue', cursive;
   font-size: 1.5rem;
   border-bottom: 5px solid rgb(161, 160, 160);
 }
 
 h1{
-  font-weight: 600;
   font-size: 48px;
   margin: 20px;
 }
@@ -58,24 +33,21 @@ h1{
   height: auto;
   padding: 10px;
 }
-
+.navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
 .navigation li a {
   text-decoration: none;
   color: #000;
   font-weight: 600;
   padding: 1.5rem;
 }
-
 .navigation li a:hover {
-opacity: 0.6;
-}
-
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 30px;
-}
+  opacity: 0.6;
+  }
 
 .arch-mag {
   display: flex;
@@ -85,9 +57,8 @@ opacity: 0.6;
   display: flex;
   justify-content: flex-end;
 }
-
 li {
-  display: inline-block;
+  display: none;
 }
 
 
@@ -141,8 +112,6 @@ hr {
  .top-projects:hover {
     color:black;    
   }
-  /* font-family: "Open Sans";  or itatik */
-
 
 
 /* ------OTHER NEWS SECTION STYLING ----- */
@@ -156,7 +125,7 @@ h4 {
   padding: 10px;
   box-shadow: 8px 8px yellow;
   width: 100px;
-  font-size: 18px;
+  font-size: 20px;
   margin: 0;
 }
 
@@ -199,7 +168,7 @@ h4 {
 /* ------CTA SECTION STYLING ----- */
 
 .cta {
-  background-color: #ffe600;
+  background-color: #fff700;
   padding: 3% 5%;
   text-align: center;
 }
@@ -308,54 +277,34 @@ footer {
   font-size: 18px;
 }
 
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
+footer a {
   text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
 }
-
-.fa:hover {
-  opacity: 0.7;
+footer a:hover {
+color:blue;
 }
-
-.fa-google {
-  background: red;
-  color: white;
-}
-
-.fa-linkedin {
-  background: #3B5998;
-  color: white;
-}
-
-.fa-github {
-  background: black;
-  color: white;
-}
-
 
 /* ------MEDIA QUERY STYLING ----- */
 
 @media (min-width: 768px) {
 
-  /* nav {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: start;
-  }
-
-  .logo-name {
-    align-self: stretch;
-    grid-column: 2;
-  }
-
-  .first, .second {
+  header {
     display: flex;
-  } */
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .navigation {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+
+  li {
+    display: inline-block;
+  } 
 
   .big-news {
     display: grid;
@@ -369,7 +318,7 @@ footer {
   }
 
   .big-news-text {
-    margin: 0;
+    margin: auto;
   }
 
   .news-cards {
@@ -390,6 +339,16 @@ footer {
 }
 
 @media (min-width: 1200px) {
+  .navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 30px;
+  }
+
+  li {
+    display: inline-block;
+  } 
 
   .news-cards {
     display: grid;
@@ -400,14 +359,13 @@ footer {
   .card {
     display: grid;
   }
-
+}
     /* Things needed to be done;
 
     - text properties
     - header / nav bar
-    - footer
     - fine tuning
-    - disable hover effect on mobile size
+    - disable hover effect on mobile size for cards
     
-    */ }
+    */ 
 
