--- a/code/style.css
+++ b/code/style.css
@@ -14,18 +14,18 @@ padding-bottom: 200px;
 /*** All text***/
 
 h1 {
-  font-size: 4rem;
+  font-size: 2rem;
   font-family: 'Archivo Black', sans-serif;
-  padding: 10px 10px;
-  margin: 10px 10px;
+  padding: 10px 5px;
+  margin: 10px 5px;
   text-align: center;
   color:#A39161;
-  letter-spacing: 20px;
+  letter-spacing: 10px;
 }
 h2 {
   font-family: 'Ubuntu', sans-serif;
   color: black;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
   line-height: 1.5;
   padding-top: 50px;
@@ -33,13 +33,13 @@ h2 {
 h3 {
   font-family: 'Ubuntu', sans-serif;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
   line-height: 1.5;
   padding-top: 20px;
 }
 p {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
   letter-spacing: 2px;
@@ -62,25 +62,29 @@ header {
   padding: 20px 0;
   background-color: white;
   border-bottom: 10px solid #FFF200;
+  width: 100%;
+  
 
 }
 header img {
-  width: 2.5rem;
-  /*margin: 5px;*/
+  width: 3rem;
+  display: none;
 }
+  
+
 
 .hamburger {
   display: flex;
-  height: 30px;
-  width: 40px;
+  height: 25px;
+  width: 30px;
   flex-direction: column;
   justify-content: space-between;
   
 }
 
 .hamburger div {
-  width: 40px; 
-  height: 6px;
+  width: 30px; 
+  height: 5px;
   background: hotpink;
   display: flex;
   margin-left: 10px;
@@ -91,8 +95,8 @@ nav {
   display: none;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
-  font-size: 1.5rem;
-  margin-right: 3rem;
+  font-size: 1rem;
+  margin-right: 1rem;
 }
 
 nav a {
@@ -114,7 +118,7 @@ nav a:hover {
 
 .big-news {
   display: flex;
-  width: 600px;
+  /*width: 600px;*/
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
@@ -124,7 +128,7 @@ nav a:hover {
 }
 
 .big-news img {
-  width: 600px;
+  width: 100%;
   align-items: center;
 }
 
@@ -144,7 +148,7 @@ nav a:hover {
   }
   
   .card {
-  width: 600px;
+  /*width: 600px;*/
   margin-left:auto;
   margin-right: auto;
   margin-top: 20px;
@@ -178,6 +182,14 @@ nav a:hover {
  .hamburger {
    display: none;
  }
+ header img {
+  display: inline-block;
+  
+ }
+ h1 {
+   font-size: 3rem;
+  
+  }
  
  .big-news {
    width: 100%;
@@ -187,14 +199,16 @@ nav a:hover {
  .big-news img{
  float: left;
  margin: 15px;
+ width: 60%
  
  }
  p {
    padding: 5px 10px;
    margin: 15px 10px;
    line-height: 0.7cm;
-   /*max-width: 850px;*/
-   font-size: 1.5rem;
+   font-size: 1rem;
+   overflow: hidden;
+   
  }
  
  .other-news{
@@ -213,7 +227,9 @@ nav a:hover {
      text-align: left;
      justify-items: center;
  }
- 
+  h1 {
+    font-size: 4rem;
+  }
  header img {
    width: 6rem;
    margin-left: 4rem;
