--- a/code/style.css
+++ b/code/style.css
@@ -79,6 +79,7 @@ header img {
   width: 30px;
   flex-direction: column;
   justify-content: space-between;
+  margin: 1.5rem;
   
 }
 
@@ -86,8 +87,8 @@ header img {
   width: 30px; 
   height: 5px;
   background: hotpink;
-  display: flex;
-  margin-left: 10px;
+  /*display: flex;*/
+  /*margin-left: 10px;*/
 
 }
 
